# src/admin/controllers/gateway.go
@@ -1,12 +1,11 @@
 package controllers
 
 import (
-	"fmt"
 	"log"
 	"net/http"
+	"time"
 
 	"github.com/gin-gonic/gin"
-	"github.com/go-playground/validator"
 	"pks.pyfreebilling.com/models"
 	"pks.pyfreebilling.com/services"
 )
@@ -17,6 +16,9 @@ import (
 // @Tags gateways
 // @Produce json
 // @Success 200 {array} models.Gateway
+// @Failure      400  {object}  api_errors.ApiError
+// @Failure      404  {object}  api_errors.ApiError
+// @Failure      500  {object}  api_errors.ApiError
 // @Router /gateways [get]
 func GetGateways(c *gin.Context) {
 	pageStr := c.DefaultQuery("page", "1")
@@ -44,18 +46,12 @@ func GetGateways(c *gin.Context) {
 // @Router /gateways/ [post]
 func CreateGateway(c *gin.Context) {
 	var gateway models.Gateway
-	if err := c.ShouldBind(&gateway); err != nil {
-		verrs := err.(validator.ValidationErrors)
-		messages := make([]string, len(verrs))
-		for i, verr := range verrs {
-			messages[i] = fmt.Sprintf(
-				"%s is required, but was empty.",
-				verr.Field())
-		}
+	if err := c.ShouldBindJSON(&gateway); err != nil {
 		c.JSON(http.StatusBadRequest,
-			gin.H{"errors": messages})
+			gin.H{"errors": err.Error()})
 		return
 	}
+	gateway.CreatedAt = time.Now()
 
 	newGateway, saverr := services.GatewaysService.CreateGateway(gateway)
 	if saverr != nil {
@@ -68,12 +64,15 @@ func CreateGateway(c *gin.Context) {
 }
 
 // GetGatewayByID  godoc
-// @Summary Gets a gateway by ID
-// @Description Returns the gateway whose id matches the id.
+// @Summary Show a gateway
+// @Description Get gateway by ID
 // @Tags gateways
 // @Produce json
-// @Param id path string true "search gateway by id"
+// @Param id path string true "Gateway ID"
 // @Success 200 {object} models.Gateway
+// @Failure      400  {object}  api_errors.ApiError
+// @Failure      404  {object}  api_errors.ApiError
+// @Failure      500  {object}  api_errors.ApiError
 // @Router /gateways/{id} [get]
 func GetGatewayByID(c *gin.Context) {
 	id := c.Params.ByName("id")
@@ -87,15 +86,31 @@ func GetGatewayByID(c *gin.Context) {
 	c.JSON(http.StatusOK, gateway)
 }
 
+// UpdateGateway  godoc
+// @Summary Update a gateway
+// @Description update gateway.
+// @Tags gateways
+// @Produce json
+// @Param id path string true "id of the gateway"
+// @Success 200 {object} models.Gateway
+// @Error 400 {string} "Invalid input"
+// @Error 404 {string} "Invalid gateway ID"
+// @Router /gateways/{id} [put]
 // UpdateGateway update a gateway
 func UpdateGateway(c *gin.Context) {
 	var gateway models.Gateway
 	id := c.Params.ByName("id")
 	_, err := services.GatewaysService.GetGateway(id)
 	if err != nil {
-		c.JSON(http.StatusNotFound, gateway)
+		c.JSON(http.StatusNotFound, gin.H{
+			"error": "Gateway not found"})
+		return
 	}
-	c.BindJSON(&gateway)
+	if err := c.ShouldBindJSON(&gateway); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{
+			"error": err.Error()})
+		return
+	}
 	updatedGateway, UpdateErr := services.GatewaysService.UpdateGateway(gateway)
 	if UpdateErr != nil {
 		c.AbortWithStatus(http.StatusNotFound)
