# src/admin/docs/swagger.json
@@ -12,7 +12,7 @@
             "name": "AGPL 3.0",
             "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
         },
-        "version": "1.0"
+        "version": "1.0.0"
     },
     "host": "localhost:8080",
     "basePath": "/api/v1",
@@ -35,6 +35,24 @@
                             "items": {
                                 "$ref": "#/definitions/models.Gateway"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
                         }
                     }
                 }
@@ -73,18 +91,63 @@
         },
         "/gateways/{id}": {
             "get": {
-                "description": "Returns the gateway whose id matches the id.",
+                "description": "Get gateway by ID",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "gateways"
                 ],
-                "summary": "Gets a gateway by ID",
+                "summary": "Show a gateway",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "search gateway by id",
+                        "description": "Gateway ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Gateway"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api_errors.ApiError"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "description": "update gateway.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "gateways"
+                ],
+                "summary": "Update a gateway",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id of the gateway",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -102,6 +165,20 @@
         }
     },
     "definitions": {
+        "api_errors.ApiError": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.Gateway": {
             "type": "object",
             "required": [
@@ -110,22 +187,28 @@
                 "port"
             ],
             "properties": {
-                "createdAt": {
+                "created_at": {
+                    "description": "Creation time",
                     "type": "string"
                 },
                 "id": {
+                    "description": "Gateway ID",
                     "type": "integer"
                 },
                 "ipaddress": {
+                    "description": "IP Address of the gateway",
                     "type": "string"
                 },
                 "name": {
+                    "description": "Name of the gateway",
                     "type": "string"
                 },
                 "port": {
+                    "description": "SIP Port of the gateway",
                     "type": "string"
                 },
-                "updatedAt": {
+                "updated_at": {
+                    "description": "Updated time",
                     "type": "string"
                 }
             }
